# Ex16-KNN-AlgoPractice

./: .env.example  .gitignore  Claude.md  DESIGN.md  PRD.md  README.md  main.py  planning.md  pyproject.toml  tasks.json
.claude/: settings.local.json
agents/: __init__.py  vectorization_agent.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py  utils.py
src/data/: __init__.py  sentence_generator.py
src/ml/: __init__.py  classification.py  clustering.py  metrics.py
src/storage/: __init__.py  file_manager.py
src/visualization/: __init__.py  color_utils.py  dimensionality_reduction.py  plotting.py  plotting_extended.py
tests/: __init__.py  conftest.py  test_integration.py
